skip attachments where the filename cannot be parsed (#97)