@@ -56,7 +56,7 @@ public class MailUtilityTest {
             MimeMessage mimeMessage = new MimeMessage(Session.getDefaultInstance(new Properties()), inputStream);
             EmailMessage emailMessage = MessageConverter.convert(mimeMessage);
             Assert.assertEquals(1, emailMessage.getAttachments().size());
-            Assert.assertEquals("test.csv", emailMessage.getAttachments().get(0).getFileName());
+            Assert.assertEquals("test.csv", emailMessage.getAttachments().getFirst().getFileName());
             Assert.assertTrue(emailMessage.getTextBody().startsWith("Ticket T29345"));
             Assert.assertTrue(emailMessage.getHtmlBody().startsWith("<!DOCTYPE html PUBLIC"));
             Assert.assertEquals("Ticket T29345 - New Comment", emailMessage.getSubject());
@@ -69,8 +69,8 @@ public class MailUtilityTest {
             MimeMessage mimeMessage = new MimeMessage(Session.getDefaultInstance(new Properties()), inputStream);
             EmailMessage emailMessage = MessageConverter.convert(mimeMessage);
             Assert.assertEquals(1, emailMessage.getAttachments().size());
-            Assert.assertEquals("Messages.pdf", emailMessage.getAttachments().get(0).getFileName());
-            Assert.assertEquals(ContentDisposition.ATTACHMENT, emailMessage.getAttachments().get(0).getContentDisposition());
+            Assert.assertEquals("Messages.pdf", emailMessage.getAttachments().getFirst().getFileName());
+            Assert.assertEquals(ContentDisposition.ATTACHMENT, emailMessage.getAttachments().getFirst().getContentDisposition());
             Assert.assertNull(emailMessage.getTextBody());
             Assert.assertNull(emailMessage.getHtmlBody());
             Assert.assertEquals("Test Subject", emailMessage.getSubject());
@@ -83,8 +83,8 @@ public class MailUtilityTest {
             MimeMessage mimeMessage = new MimeMessage(Session.getDefaultInstance(new Properties()), inputStream);
             EmailMessage emailMessage = MessageConverter.convert(mimeMessage);
             Assert.assertEquals(1, emailMessage.getAttachments().size());
-            Assert.assertEquals("05062021scan05062021.pdf", emailMessage.getAttachments().get(0).getFileName());
-            Assert.assertEquals(ContentDisposition.ATTACHMENT, emailMessage.getAttachments().get(0).getContentDisposition());
+            Assert.assertEquals("05062021scan05062021.pdf", emailMessage.getAttachments().getFirst().getFileName());
+            Assert.assertEquals(ContentDisposition.ATTACHMENT, emailMessage.getAttachments().getFirst().getContentDisposition());
             Assert.assertTrue(emailMessage.getTextBody().contains("HIPAA CONFIDENTIALITY NOTICE"));
             Assert.assertNull(emailMessage.getHtmlBody());
             Assert.assertEquals("SWC Scanned", emailMessage.getSubject());
@@ -110,6 +110,16 @@ public class MailUtilityTest {
             Assert.assertTrue(emailMessage.getHtmlBody().contains("Outlook for Android"));
             Assert.assertNull(emailMessage.getTextBody());
             Assert.assertEquals("Test fax", emailMessage.getSubject());
+        }
+    }
+
+    @Test
+    public void unparsableFilename() throws IOException, MessagingException {
+        try (InputStream inputStream = Resources.getResource("unparsable-filename.mime").openStream()) {
+            MimeMessage mimeMessage = new MimeMessage(Session.getDefaultInstance(new Properties()), inputStream);
+            EmailMessage emailMessage = MessageConverter.convert(mimeMessage);
+            Assert.assertEquals("SWC Scanned", emailMessage.getSubject());
+            Assert.assertEquals(0, emailMessage.getAttachments().size());
         }
     }
 }
